# ansible-role-docker

./: .gitignore  .talismanrc  .travis.yml  .yamllint  Makefile  README.md  dependencies.yml  install.sh  molecule.yml  playbook.retry  playbook.yml  pyproject.toml  requirements.yml
.github/workflows/: install.yml  libvirt.yml  lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
docker/: arch.dockerfile  jessie.dockerfile  xenial.dockerfile
handlers/: main.yml
install/: playbook.yml
meta/: main.yml
molecule/common/: converge.yml  prepare.yml  verify.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml  playbook.yml  verify.yml
molecule/default/roles/: nephelaiio.pip
molecule/default/tests/: test_default.py
molecule/hold/: converge.yml  molecule.yml  prepare.yml  side_effect.yml  verify.yml
molecule/install/: converge.yml  molecule.yml  verify.yml
molecule/mirror/: create.yml  destroy.yml  molecule.yml  prepare.yml
tasks/: config.yml  lock.yml  logging.yml  main.yml  repo.yml  service.yml  users.yml
tests/: test_command.py
vars/: Archlinux.yml  Debian.yml  RedHat.yml  Ubuntu.yml  ubuntu-focal.yml
