[tool.poetry]
name = "nephelaiio.docker"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.6.0", markers = "platform_system != 'Windows'" }
ansible = "^10.0.0"
molecule = "^24.6.0"
molecule-plugins = "^23.5.3"
yamllint = "^1.35.1"
netaddr = "^1.3.0"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
